src/snapshots/vlotus__snapshots__snapshot_clipboard_mark_perimeter.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 322
expression: "render_with_highlights(&mut app, W, H)"
---
┌ Formula ─────────────────────────────────────────────────────────────────────┐
│F6:                                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1                                                                          │
│   2               a            b                                             │
│   3               c            d                                             │
│   4                                                                          │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- NORMAL -- F6           :q quit  i/a:insert  v:visual  /:search  hjkl:move   
─── highlights ───
mark perimeter: (x=20..=31, y=6), (x=33..=44, y=6), (x=20..=31, y=7), (x=33..=44, y=7)
