src/snapshots/vlotus__snapshots__snapshot_color_picker_hex_mode.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 446
expression: "render(&mut app, W, H)"
---
┌ Picker ──────────────────────────────────────────────────────────────────────┐
│A1: x                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1  x                                                                       │
│   2                                                                          │
│   3                                                                          │
│   4                  ┌ Background color ─────────────┐                       │
│   5                  │  █████  █████  █████  █████   │                       │
│   6                  │  █████  █████  █████  █████   │                       │
│   7                  │  █████  █████  █████  █████   │                       │
│   8                  │  █████  █████  █████  █████   │                       │
│   9                  │  █████  █████  █████  █████   │                       │
│  10                  │  █████  █████  █████          │                       │
│  11                  │ hex: #fa3___                  │                       │
│  12                  │ 0-9a-f: hex | Enter: apply | ?│                       │
│  13                  └───────────────────────────────┘                       │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- PICKER -- A1           :q quit  i/a:insert  v:visual  /:search  hjkl:move
