src/snapshots/vlotus__snapshots__snapshot_color_picker_open.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 431
expression: "render(&mut app, W, H)"
---
┌ Picker ──────────────────────────────────────────────────────────────────────┐
│A1: x                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1  x                                                                       │
│   2                                                                          │
│   3                                                                          │
│   4                  ┌ Foreground color ─────────────┐                       │
│   5                  │ >█████< █████  █████  █████   │                       │
│   6                  │  █████  █████  █████  █████   │                       │
│   7                  │  █████  █████  █████  █████   │                       │
│   8                  │  █████  █████  █████  █████   │                       │
│   9                  │  █████  █████  █████  █████   │                       │
│  10                  │  █████  █████  █████          │                       │
│  11                  │ red  #f38ba8                  │                       │
│  12                  │ hjkl: nav | Enter: apply | ?: │                       │
│  13                  └───────────────────────────────┘                       │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- PICKER -- A1           :q quit  i/a:insert  v:visual  /:search  hjkl:move
