src/snapshots/vlotus__snapshots__snapshot_command_prompt.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 246
expression: "render(&mut app, W, H)"
---
┌ Command ─────────────────────────────────────────────────────────────────────┐
│A1:                                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1                                                                          │
│   2                                                                          │
│   3                                                                          │
│   4                                                                          │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
:tabnew Foo
