src/snapshots/vlotus__snapshots__snapshot_datetime_autostyle.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 376
expression: "render_with_highlights(&mut app, W, H)"
---
┌ Formula ─────────────────────────────────────────────────────────────────────┐
│A7:                                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│                A                 B            C            D                 │
│   1  2025-04-27                                                              │
│   2  plain text                                                              │
│   3  2025-04-27 12:30:45                                                     │
│   4  31d                                                                     │
│   5  12:30:45                                                                │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- NORMAL -- A7           :q quit  i/a:insert  v:visual  /:search  hjkl:move   
─── highlights ───
cursor: (x=7..=28, y=11)
datetime: (x=7..=28, y=5), (x=7..=28, y=7), (x=7..=28, y=8), (x=7..=28, y=9)
