src/snapshots/vlotus__snapshots__snapshot_datetime_friendly_display.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 391
expression: "render(&mut app, W, H)"
---
┌ Formula ─────────────────────────────────────────────────────────────────────┐
│A6:                                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│                A                 B            C            D                 │
│   1  485d                                                                    │
│   2                                                                          │
│   3                                                                          │
│   4                                                                          │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- NORMAL -- A6           :q quit  i/a:insert  v:visual  /:search  hjkl:move
