src/snapshots/vlotus__snapshots__snapshot_formula_ref_highlight.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 293
expression: "render_with_highlights(&mut app, W, H)"
---
┌ Insert ──────────────────────────────────────────────────────────────────────┐
│C1: =A1*A4                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1           200              │=A1*A4    │                                  │
│   2      TRUE                                                                │
│   3     FALSE                                                                │
│   4           1.1                                                            │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- INSERT -- C1                     EDIT — Enter to confirm, Esc to cancel     
─── highlights ───
edit cursor: (x=33..=44, y=5)
ref highlight: (x=7..=18, y=5), (x=7..=18, y=8)
