src/snapshots/vlotus__snapshots__snapshot_full_format_grid.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 442
expression: "render(&mut app, W, H)"
---
┌ Formula ─────────────────────────────────────────────────────────────────────┐
│A1: 1.25                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1         $1.25                                                            │
│   2          4.5%                                                            │
│   3           100                                                            │
│   4  hello                                                                   │
│   5    centered                                                              │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- NORMAL -- A1           :q quit  i/a:insert  v:visual  /:search  hjkl:move
