src/snapshots/vlotus__snapshots__snapshot_hyperlink_autostyle.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 348
expression: "render_with_highlights(&mut app, W, H)"
---
┌ Formula ─────────────────────────────────────────────────────────────────────┐
│A6:                                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│                A                 B            C            D                 │
│   1  https://example.com                                                     │
│   2  plain text                                                              │
│   3  mailto:user@host                                                        │
│   4  file:///tmp/x                                                           │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- NORMAL -- A6           :q quit  i/a:insert  v:visual  /:search  hjkl:move   
─── highlights ───
cursor: (x=7..=28, y=10)
hyperlink: (x=7..=28, y=5), (x=7..=28, y=7), (x=7..=28, y=8)
