src/snapshots/vlotus__snapshots__snapshot_hyperlink_function_renders_label.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 368
expression: "render_with_highlights(&mut app, W, H)"
---
┌ Formula ─────────────────────────────────────────────────────────────────────┐
│A6:                                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│                A                 B            C            D                 │
│   1  click here                                                              │
│   2  https://plain.exampl…                                                   │
│   3  regular cell                                                            │
│   4                                                                          │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- NORMAL -- A6           :q quit  i/a:insert  v:visual  /:search  hjkl:move   
─── highlights ───
cursor: (x=7..=28, y=10)
hyperlink: (x=7..=28, y=5), (x=7..=28, y=6)
