src/snapshots/vlotus__snapshots__snapshot_insert_mode_mid_edit.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 207
expression: "render(&mut app, W, H)"
---
┌ Insert ──────────────────────────────────────────────────────────────────────┐
│B2: hello                                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1                                                                          │
│   2               │hello     │                                               │
│   3                                                                          │
│   4                                                                          │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- INSERT -- B2                     EDIT — Enter to confirm, Esc to cancel
